--- a/it/games.html
+++ b/it/games.html
@@ -44,7 +44,7 @@ Questo gioco è gratis, si può giocare usando il proprio browser cliccando sul 
 Questo gioco è gratis, si può giocare usando il proprio browser cliccando sul link in alto. Lo scopo del gioco è quello di affondare il nemico con il tuo cannone. Il giocatore e il computer si alternano nel  tirare il colpo. L'angolo di ogni colpo è controllato dalla posizione del mouse. Premi il mouse per caricare il colpo e rilascialo per sparare. La velocità della palla è controllata dal tempo della pressione sul tasto del mouse. Il gioco contiene istruzioni scritte.
 </p>
 <h2>UFO Run</h2>
-<h3><a href="http://play.famobi.com/ufo-run" target="_blank">Play UFO Run</a><h3>
+<h3><a href="http://play.famobi.com/ufo-run" target="_blank">Play UFO Run</a></h3>
 <p>Price: Free</p>
 <p>Difficulty: Low - Medium</p>
 <div style="max-width: 560px; height: auto;"
