Finish translating games.html to it

--- a/it/games.html
+++ b/it/games.html
@@ -70,10 +70,8 @@ Questo gioco è gratis, si può giocare usando il proprio browser cliccando sul 
 Questo gioco è gratis, si può giocare usando il proprio brower cliccando sul link in alto. Lo scopo del gioco è quello di posizionare i blocchi colorati nella giusta posizione. Il gioco contiene istruzioni scritte.
 </p>
 <h2>Monument Valley</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.ustwo.monumentvalley" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/monument-valley/id728293409?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: £2.49</p>
 <p>Difficulty: Medium</p>
 <p>Requires Android 2.3.3 or iOS 6.0. App Store age rating: 4+ </p>
@@ -84,13 +82,11 @@ Questo gioco è gratis, si può giocare usando il proprio brower cliccando sul l
 </div>
 </div>
 <p>
-This game costs £2.49, and can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. It is possible to buy additional levels as an in app purchase. The object of the game is to navigate the character through a series of 3D puzzles. The character’s movement is controlled by tapping at the location you wish to move to. Various objects can be rotated and dragged in order to make a path for the character. This game contains some written instructions.
+Questo gioco costa £2,49, e può essere scaricato su Google Play Store (per Android) oppure su  Apple App Store ( per iPhone/iPad) seguento il link. Inoltre è possibile comprare livelli successivi nell'app store. Lo scopo del gicoco è quello di navigare il protagonista attraverso una serie di puzzle 3D. Per controllare il movimento del protagonista si preme  un punto nello spazio. Diversi oggetti possono essere ruotati e coinvolti in modo da tracciare il sentiero per il protagonista.  Il gioco contiene istruzioni scritte.
 </p>
 <h2>99 Bricks Wizard Academy</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=nl.weirdbeard.brickswizardacademy" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/99-bricks-wizard-academy/id784444243?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: Free - £1.99</p>
 <p>Difficulty: Medium</p>
 <p>Requires Android 2.3.3 or iOS 6.0. App Store age rating: 4+</p>
@@ -101,13 +97,11 @@ This game costs £2.49, and can be downloaded from either the Google Play Store 
 </div>
 </div>
 <p>
-This game is costs £1.99 on Apple devices. The game is free on Android devices. It is possible to make in app purchases within the game. The game can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The object of the game is to build a tower by positioning the coloured blocks. The blocks can be rotated by tapping anywhere on the screen and moved left or right by dragging in the relevant direction. The speed of the blocks can be increased by dragging the block downwards. The tower is finished when 3 blocks have fallen off the base. This game contains written instructions.
+Il gioco costa £1,99 nell' Apple Store, mentre è gratis per Android. Il gioco puà essere scaricato da Google Play Store ( per Android) o Apple App Store (per iPhone/iPad) seguento il link. Lo scopo del gioco è quello di costruire una torre posizionando i blocchi colorati. I blocchi possono essere ruotati premendo in qualsiasi posto nello schermo e spostati a destra o sinistra trascinandoli nella direzione attinente. La velocita dei blocchi può esere aumentato trascinando il blocco in giù. La torre è finita quando 3 blocchi cadono sul fondo. Il gioco contiene istruzioni scritte.
 </p>
 <h2>Mole Kart</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.droidhen.taomee.molekart" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/mole-kart-i/id522579018?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Medium</p>
 <p>Requires Android 2.2 or  iOS 4.1. App Store age rating: 4+</p>
@@ -118,13 +112,11 @@ This game is costs £1.99 on Apple devices. The game is free on Android devices.
 </div>
 </div>
 <p>
-This game is free, and can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The object of the game is to compete in a series of kart races. The kart can be steered left or right with on-screen buttons. Various power-ups can be collected, and these are also controlled with on-screen buttons. This game contains written instructions.
+Questo gioco è gratis, può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Lo scopo del gioco è quello di competere in una serie di corse di kart. I kart possono essere guidati a sinistra o destra con i bottoni sullo schermo. Svariate forze possono essere collezionate, e sono controllate anche queste con dei tasti sullo schermo.  Il gioco contiene istruzioni scritte.
 </p>
 <h2>Cordy 2</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.silvertree.cordy2" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/cordy-2/id550378113?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Medium</p>
 <p>Requires Android 2.2 or iOS 4.0. App Store age rating: 4+</p>
@@ -135,13 +127,11 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </div>
 </div>
 <p>
-A limited version of this game can be downloaded for free. It is possible to buy the full game as an in app purchase. It is also possible to make other in app purchases. The game can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The object of the game is to guide the character through the levels, collecting gears and performing various other tasks. The character is controlled with on screen buttons, which vary as the game progresses. This game contains written instructions.
+Una versione limitata del gioco può essere scaricata gratuitamente. E' possibile comprare il gioco completo nell'app store. Questo gioco può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Lo scopo del gioco è quello di guidare il protagonista attraverso i livelli, collezionando attrezzi ed eseguendo vari compiti. Il protagonista è controllato con i bottoni sullo schermo che variano con il progredire del gioco. Il gioco contiene istruzioni scritte.
 </p>
 <h2>Shu’s Garden</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=ca.jasonrtbond.shusgarden" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/shus-garden/id821684800?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: Free - £0.69</p>
 <p>Difficulty: Low</p>
 <p>Requires Android 4.0 or iOS 6.0. App Store age rating: 4+</p>
@@ -152,13 +142,11 @@ A limited version of this game can be downloaded for free. It is possible to buy
 </div>
 </div>
 <p>
-This game is free on Android devices, and costs £0.69 on Apple devices. The game can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The object of the game is to grow plants, by rolling the character over unnourished land, collecting and depositing seeds. This game contains a parent’s section, with detailed instructions.
+Questo gioco è gratis per i dispositivi Android, mentre ha un costo di £0,69 sui dispositivi Apple. Questo gioco può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Lo scopo del gioco è quello di far crescere le piante, facendo ruotare il protagonista in un terreno incolto, collezionando e depositando semi. Questo gioco contiene una sezione genitori, con istruzioni dettagliate.
 </p>
 <h2>LEGO Juniors Quest</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.lego.juniors.quest" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/lego-juniors-quest/id845046214?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Low</p>
 <p>Requires Android 4.0 or iOS 6.0. App Store age rating: 4+</p>
@@ -169,13 +157,11 @@ This game is free on Android devices, and costs £0.69 on Apple devices. The gam
 </div>
 </div>
 <p>
-This game is free, and can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The game provides a structured story, with various gameplay objectives. Controls are explained visually, with no written instructions.
+Questo gioco è gratis, può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Il gioco fornisce una storia strutturata con diversi obiettivi nei giochi. I tasti di comando sono spiegati visivamente senza istruzioni scritte.
 </p>
 <h2>Dr. Panda’s Handyman - Free</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.tribeplay.pandahandymanlite" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/dr.-pandas-handyman-free/id739573635?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Low</p>
 <p>Requires Android 2.0.1 or iOS 4.0. App Store age rating: 4+</p>
@@ -186,13 +172,11 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </div>
 </div>
 <p>
-This game is free, and can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The object of the game is to perform various tasks to fix up the house, using simple touch controls.
+Questo gioco è gratis, può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Lo scopo del gioco è di eseguire diversi compiti per riordinare la casa usando semplicemente il touch.
 </p>
 <h2>Amazing Alex Free</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.rovio.amazingalex.trial" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/amazing-alex-hd-free/id549769784?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Low - High</p>
 <p>Requires Android 2.1 or iOS 4.2. App Store age rating: 4+</p>
@@ -203,13 +187,11 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </div>
 </div>
 <p>
-This game is free, and can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The object of the game is to build a series of contraptions using everyday objects. Objects are moved by touching them and dragging them into position.
+Questo gioco è gratis, può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Lo scopo del gioco è quello di costruire una serie di macchinari usando oggetti di ogni giorno. Gli oggetto si muovono toccandoli e trascinandoli nella posizione.
 </p>
 <h2>Toca Builders</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.tocaboca.tocabuild" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/toca-builders/id652077009?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: £1.99</p>
 <p>Difficulty: Low - Medium</p>
 <p>Requires Android 4.0.3 or iOS 5.0. App Store age rating: 4+</p>
@@ -220,13 +202,11 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </div>
 </div>
 <p>
-This game costs £1.99. The game can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The game does not have set objectives, but offers a variety of characters who can manipulate blocks in various ways, all with different controls. This game contains a parent’s section with detailed instructions.
+Questo gioco costa £1.99. Questo gioco può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Questo gioco non ha uno scopo preciso, ma offre una serie di protagonisti con cui manipolare i blocchi in vario modo tutti con un controllo diverso. Questo gioco contiene una sezione per i genitori con istruzioni dettagliate.
 </p>
 <h2>Gravity Duck</h2>
-<p>
 <h3><a href="https://play.google.com/store/apps/details?id=com.noodlecake.gravityduck" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/gravity.duck/id599272198?mt=8&uo=4" target="itunes_store">iOS</a></h3>
-</p>
 <p>Price: £0.54 - £0.69</p>
 <p>Difficulty: Medium - High</p>
 <p>Rrequires Android 2.3 or iOS 4.3. App Store age rating: 4+</p>
@@ -237,6 +217,6 @@ This game costs £1.99. The game can be downloaded from either the Google Play S
 </div>
 </div>
 <p>
-This game costs between £0.54 and £0.69. It is possible to make in app purchases within the game. The game can be downloaded from either the Google Play Store (for Android tablet) or Apple App Store (for iPhone / iPad) by following the relevant link. The object of the each level is navigate the duck to the golden egg. The duck is controlled by the four directional buttons (“the D-pad”) in the bottom left corner of the screen. The A button in the bottom right corner of the screen changes the direction of gravity, so that the duck can walk on the walls or roof. This game contains written instructions.
+Questo gioco costa tra £0.54 e £0.69. E' possibile comprare il gioco completo nell'app store. Questo gioco può essere scaricato su Google Play Store (per Android) oppure su Apple App Store ( per iPhone/iPad) seguento il link. Lo scopo di ogni livello è quello di dirigere l'anatra all'uovo dorato. L'anatra è controllata da quattro bottoni direzionali nel bordo a sinistra dello schermo. Il bottone A nell'angolo destro in basso cambia la direzione della gravità, così che l'anatra può camminare sul pavimento o sul tetto. Il gioco contiene istruzioni scritte.
 </p>
 </div>
