--- a/it/index.html
+++ b/it/index.html
@@ -5,7 +5,7 @@ layout: defaultWithFooter_it
 <div class="container">
   <div class="row">
     <div class="col-md-4" style="text-align: center;"><h1>Siamo sviluppando un video game</h1></div>
-    <div class="col-md-4" style="text-align: center;"><h1>per aiutare i bambini con la Sindrome di Prederr Willi</h1></div>
+    <div class="col-md-4" style="text-align: center;"><h1>per aiutare i bambini con la Sindrome di Prader Willi</h1></div>
     <div class="col-md-4" style="text-align: center;"><h1>per migliorare nel task switching (cambio del compito)</h1></div>
   </div>
   <div class="row">
