--- a/it/dailyFeedbackForm.html
+++ b/it/dailyFeedbackForm.html
@@ -2,7 +2,7 @@
 title: Daily Feedback Form
 layout: default_it
 ---
-<form class="form-horizontal" data-toggle="validator" action="http://forms.brace.io/tasterproject@gmail.com" method="POST">
+<form class="form-horizontal" data-toggle="validator" action="http://formspree.io/tasterproject@gmail.com" method="POST">
 <fieldset>
 
 <!-- Form Name -->
