--- a/it/about.html
+++ b/it/about.html
@@ -1,6 +1,6 @@
 ---
 title: About
-layout: defaultWithFooter
+layout: defaultWithFooter_it
 ---
 <div>
 <h1>TASTER -  Training Attention Switching for Temper Episode Reduction.</h1>
