--- a/guide.html
+++ b/guide.html
@@ -26,5 +26,5 @@ layout: defaultWithFooter
 <li>At the end of each day, you and your child / the person you care for should complete the <a href="{{site.url}}/dailyFeedbackForm">Daily Feedback Form</a>.</li>
 <li>It is important that your child / the person you care for plays as many of the games as possible. Encourage them to try all the games, and not just their favourites.</li>
 </ol>
-<h3>After the two week period, you and your child / the person you care for should complete the <a href="{{ site.url }}finalFeedbackForm">Final Feedback Form</a>.</h3>
+<h3>After the two week period, you and your child / the person you care for should complete the <a href="{{ site.url }}/finalFeedbackForm">Final Feedback Form</a>.</h3>
 </div>
