--- a/it/about.html
+++ b/it/about.html
@@ -7,7 +7,7 @@ layout: defaultWithFooter_it
 <h3>E' noto che le persone con la sindrome di Prader Willi hanno particolari difficoltà con i compiti chiamati "task switching" o "attention switching" che coinvolgono le capacità di gestione del cambiamento. Queste difficoltà sono collegate alla forte preferenza per la routine manifestata da molte delle persone con al sindrome, infatti si agitano e reagiscono con comportamenti  esplosivi quando le cose cambiano durante la routine.</h3>
 <h3>Il progetto TASTER ha lo scopo di sviluppare un primo prototipo di gioco per computer basato su un programma di training per i compiti di task switching. Il gioco è progettato con particolere attenzione alle  necessità delle persone con PWS.  I risultati di questo progetto saranno decisamente importanti per  rendere il programma di training un metodo efficace per aiutare le persone con PWS,  in particolar modo favorendo la gestione del comportamento durante le variazioni della routine quotidiana o altre situazioni che prevedano cambiamenti.</h3>
 <h3>Il progetto TASTER ha sede presso <a href="http://www.qub.ac.uk/schools/psy" target="_blank">Queen's University Belfast</a> ed è finanziata dalla <a href="http://www.fpwr.org" target="_blank">Fondazione per la Ricerca Preder Willi</a>.</h3>
-<h3>Mentre in Italia la ricerca è effetuata grazie al  contributo di Azzurra Associazione Malattie Rare e Fondazione Prosolidar.</h3>
+<h3>Mentre in Italia la ricerca è effetuata grazie al contributo di Azzurra Associazione Malattie Rare Onlus e Fondazione Prosolidar.</h3>
 <h3>Se sei un genitore di una persona con PWS e vuoi partecipare alla nostra ricerca, puoi guardare il video sottostante per maggiori informazioni.</h3>
 </div>
 <div class="container" style="max-width: 700px; height: auto;"
