--- a/references.html
+++ b/references.html
@@ -3,6 +3,12 @@ title: Conference References
 layout: defaultWithFooter
 ---
 <div>
+<h3>
+  HUMAN-CENTRED DESIGN OF ‘TASTER’, A COGNITIVE TRAINING GAME FOR CHILDREN WITH PRADER-WILLI SYNDROME
+</h3>
+<h3>
+  Nigel Robb, Kate A. Woodcock, Annalu Waller
+</h3>
 <ol>
 <li>
 Druin, A. (2002). The role of children in the design of new technology. Behaviour and information technology, 21(1), 1-25.
