--- a/references.html
+++ b/references.html
@@ -2,34 +2,48 @@
 title: Conference References
 layout: defaultWithFooter
 ---
-<div>
-<h3>
-  HUMAN-CENTRED DESIGN OF ‘TASTER’, A COGNITIVE TRAINING GAME FOR CHILDREN WITH PRADER-WILLI SYNDROME
-</h3>
-<h3>
-  Nigel Robb, Kate A. Woodcock, Annalu Waller
-</h3>
-<ol>
-<li>
-Druin, A. (2002). The role of children in the design of new technology. Behaviour and information technology, 21(1), 1-25.
-</li>
-<li>
-Vredenburg, K., Mao, J. Y., Smith, P. W., & Carey, T. (2002). A survey of user-centered design practice. Proceedings of the SIGCHI conference on Human factors in computing systems. ACM.
-</li>
-<li>
-Prosser, H., & Bromley, J. (2012). Interviewing people with intellectual disabilities. In Emerson, E., Hatton, C., Dickson, K., Gone, R., & Caine, A. (Eds.), Clinical Psychology and People with Intellectual Disabilities. Chichester: John Wiley and Sons.
-</li>
-<li>
-Green, C. S., Sugarman, M. A., Medford, K., Klobusicky, E., & Bavelier, D. (2012). The effect of action video game experience on task-switching. Computers in Human Behavior, 28(3), 984-994.
-</li>
-<li>
-Battlefield 3 [video game]. (2011). Redwood City, CA: Electronic Arts.
-</li>
-<li>
-Call of Duty: Modern Warfare 3 [video game]. (2011). Santa Monica, CA: Activision.
-</li>
-<li>
-Halo 3 [video game]. (2007). Redmond, WA: Microsoft Game Studios.
-</li>
-</ol>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+</head>
+
+<body>
+
+    <div>
+        <h3>HUMAN-CENTRED DESIGN OF ‘TASTER’, A COGNITIVE TRAINING GAME FOR
+        CHILDREN WITH PRADER-WILLI SYNDROME</h3>
+
+        <h4>Nigel Robb, Kate A. Woodcock, Annalu Waller</h4>
+
+        <ol>
+            <li>Druin, A. (2002). The role of children in the design of new
+            technology. Behaviour and information technology,&nbsp;21(1),
+            1-25.</li>
+
+            <li>Vredenburg, K., Mao, J. Y., Smith, P. W., & Carey, T. (2002). A
+            survey of user-centered design practice. Proceedings of the SIGCHI
+            conference on Human factors in computing systems. ACM.</li>
+
+            <li>Prosser, H., & Bromley, J. (2012). Interviewing people with
+            intellectual disabilities. In Emerson, E., Hatton, C., Dickson, K.,
+            Gone, R., & Caine, A. (Eds.), Clinical Psychology and People with
+            Intellectual Disabilities. Chichester: John Wiley and Sons.</li>
+
+            <li>Green, C. S., Sugarman, M. A., Medford, K., Klobusicky, E., &
+            Bavelier, D. (2012). The effect of action video game experience on
+            task-switching. Computers in Human Behavior,&nbsp;28(3),
+            984-994.</li>
+
+            <li>Battlefield 3 [video game]. (2011). Redwood City, CA:
+            Electronic Arts.</li>
+
+            <li>Call of Duty: Modern Warfare 3 [video game]. (2011). Santa
+            Monica, CA: Activision.</li>
+
+            <li>Halo 3 [video game]. (2007). Redmond, WA: Microsoft Game
+            Studios.</li>
+        </ol>
+    </div>
+</body>
+</html>
