--- a/references.html
+++ b/references.html
@@ -9,7 +9,6 @@ layout: defaultWithFooter
 </head>
 
 <body>
-
     <div>
         <h3>HUMAN-CENTRED DESIGN OF ‘TASTER’, A COGNITIVE TRAINING GAME FOR
         CHILDREN WITH PRADER-WILLI SYNDROME</h3>
@@ -17,6 +16,11 @@ layout: defaultWithFooter
         <h4>Nigel Robb, Kate A. Woodcock, Annalu Waller</h4>
 
         <ol>
+            <li>Woodcock, K., Oliver, C., & Humphreys, G. (2009). Associations
+            between repetitive questioning, resistance to change, temper
+            outbursts and anxiety in Prader–Willi and Fragile‐X syndromes.
+            Journal of Intellectual Disability Research, 53(3), 265-278.</li>
+
             <li>Druin, A. (2002). The role of children in the design of new
             technology. Behaviour and information technology,&nbsp;21(1),
             1-25.</li>
