--- a/references.html
+++ b/references.html
@@ -16,6 +16,12 @@ layout: defaultWithFooter
         <h4>Nigel Robb, Kate A. Woodcock, Annalu Waller</h4>
 
         <ol>
+            <li>Woodcock, K. A., Oliver, C., & Humphreys, G. W. (2009).
+            Task-switching deficits and repetitive behaviour in genetic
+            neurodevelopmental disorders: data from children with Prader–Willi
+            syndrome chromosome 15 q11–q13 deletion and boys with Fragile X
+            syndrome. Cognitive Neuropsychology, 26(2), 172-194.</li>
+
             <li>Woodcock, K., Oliver, C., & Humphreys, G. (2009). Associations
             between repetitive questioning, resistance to change, temper
             outbursts and anxiety in Prader–Willi and Fragile‐X syndromes.
