--- a/it/guide.html
+++ b/it/guide.html
@@ -25,5 +25,5 @@ layout: defaultWithFooter_it
 <li>Alla fine di ogni giorno tu e tuo figlio/a compilate <a href="{{site.url}}/it/dailyFeedbackForm">il Modulo Giornaliero di Feedback</a></li>
 <li>E' importante che tuo figlio/a  con il maggior numero di giochi possibili e non solo con quelli preferiti.</li>
 </ol>
-<h3>Dopo il periodo di due settimane, sarà disponibile un questionario finale per te e tuo figlio/a.</h3>
+<h3>Dopo un periodo di due settimane, tu e il tuo bambino/persona che assisti dovrete completare <a href="{{site.url}}/it/finalFeedbackForm">il modulo finale di feedback</a>/a.</h3>
 </div>
