--- a/play-testing.html
+++ b/play-testing.html
@@ -6,12 +6,8 @@ layout: defaultWithFooter
 <h1>Play testing of our first prototype game</h1>
 <h3>The first prototype of our game is now ready for play testing. This is a beta version of the software, so it may have some bugs. We'd like our participants to try the game for a short time, and tell us what they think of it.</h3>
 <h3></h3>
-<h3>The game can be accessed in several ways:
-<ul>
-<li>Android users can download the game for free from <a href="https://play.google.com/store/apps/details?id=com.nrobb.taster">Google Play</a>.</li>
-<li>iOS users can access the game through the CocoonJS launcher app. Full instructions on how to do this can be found <a href="{{site.url}}/using-the-cocoonjs-launcher">here</a>.</li>
-<li>The game can also be played in most web browsers (either on a tablet or a computer) at <a href="http://nrobb.github.io/taster/">this link</a>.</li>
-</li>
-</ul>
-</h3>
+<h3>The game can be accessed in several ways:</h3>
+<h3>Android users can download the game for free from <a href="https://play.google.com/store/apps/details?id=com.nrobb.taster">Google Play</a>.</h3>
+<h3>iOS users can access the game through the CocoonJS launcher app. Full instructions on how to do this can be found <a href="{{site.url}}/using-the-cocoonjs-launcher">here</a>.</h3>
+<h3>The game can also be played in most web browsers (either on a tablet or a computer) at <a href="http://nrobb.github.io/taster/">this link</a>.</h3>
 </div>
