--- a/play-testing.html
+++ b/play-testing.html
@@ -7,7 +7,8 @@ layout: defaultWithFooter
 <h3>The first prototype of our game is now ready for play testing. This is a beta version of the software, so it may have some bugs. We'd like our participants to try the game for a short time, and tell us what they think of it.</h3>
 <h3></h3>
 <h3>The game can be accessed in several ways:</h3>
-<h3>Android users can download the game for free from <a href="https://play.google.com/store/apps/details?id=com.nrobb.taster">Google Play</a>.</h3>
+<h3>Android users can download the game for free from <a href="https://play.google.com/store/apps/details?id=com.nrobb.taster" target="_blank">Google Play</a>.</h3>
 <h3>iOS users can access the game through the CocoonJS launcher app. Full instructions on how to do this can be found <a href="{{site.url}}/using-the-cocoonjs-launcher">here</a>.</h3>
-<h3>The game can also be played in most web browsers (either on a tablet or a computer) at <a href="http://nrobb.github.io/taster/">this link</a>.</h3>
+<h3>The game can also be played in most web browsers (either on a tablet or a computer) at <a href="http://nrobb.github.io/taster/" target="_blank">this link</a>.</h3>
+<h3>Please try the game out with your child/the person you care for, then record your feedback using the <a href="{{site.url}}/play-testing-feedback-form">play testing feedback form</a>.</h3>
 </div>
