--- a/using-the-cocoonjs-launcher.html
+++ b/using-the-cocoonjs-launcher.html
@@ -3,3 +3,7 @@ title: Using the CocoonJS launcher
 layout: defaultWithFooter
 ---
 <div>
+<h1>Accessing the game through the CocoonJS launcher.</h1>
+<h3>The CocoonJS launcher is a free app that allows you to test HTML5 games on Android and iOS. To use the lanucher, follow these instructions:</h3>
+<h3>Download and install the launcher. It is available for <a href="https://play.google.com/store/apps/details?id=com.ideateca.cocoonjslauncher&hl=en" target="_blank">Android</a> and <a href="https://itunes.apple.com/gb/app/cocoonjs-by-ludei/id519623307?mt=8" target="_blank">iOS</a> devices.</h3>
+</div>
