--- a/using-the-cocoonjs-launcher.html
+++ b/using-the-cocoonjs-launcher.html
@@ -4,25 +4,26 @@ layout: defaultWithFooter
 ---
 <div>
 <h1>Accessing the game through the CocoonJS launcher.</h1>
-<h3>The CocoonJS launcher is a free app that allows you to test HTML5 games on Android and iOS. To use the lanucher, follow these instructions:</h3>
+<h3>The CocoonJS launcher is a free app that allows you to test HTML5 games on Android and iOS. To use the lanucher, follow these instructions:
 <ol>
 <li>
-<h3>Download and install the launcher. It is available for <a href="https://play.google.com/store/apps/details?id=com.ideateca.cocoonjslauncher&hl=en" target="_blank">Android</a> and <a href="https://itunes.apple.com/gb/app/cocoonjs-by-ludei/id519623307?mt=8" target="_blank">iOS</a> devices.</h3>
+Download and install the launcher. It is available for <a href="https://play.google.com/store/apps/details?id=com.ideateca.cocoonjslauncher&hl=en" target="_blank">Android</a> and <a href="https://itunes.apple.com/gb/app/cocoonjs-by-ludei/id519623307?mt=8" target="_blank">iOS</a> devices.
 </li>
 <li>
-<h3>Start the launcher. Select YOUR APP.</h3>
+Start the launcher. Select YOUR APP.
 <img src="{{ site.url }}/images/cocoon01.png">
 </li>
 <li>
-<h3>You will be asked to log in. An account has been created for you, and your login details will have been sent to you by email.</h3>
+You will be asked to log in. An account has been created for you, and your login details will have been sent to you by email.
 </li>
 <li>
-<h3>Tap "Select a URL to a zip or html file", and enter the following: nrobb.github.io/taster</h3>
+Tap "Select a URL to a zip or html file", and enter the following: nrobb.github.io/taster
 <img src="{{ site.url }}/images/cocoon02.png">
 </li>
 <li>
-<h3>Select CANVAS+ to load and play the game.</h3>
+Select CANVAS+ to load and play the game.
 <img src="{{ site.url }}/images/cocoon03.png">
 </li>
 </ol>
+</h3>
 </div>
