--- a/using-the-cocoonjs-launcher.html
+++ b/using-the-cocoonjs-launcher.html
@@ -17,7 +17,7 @@ layout: defaultWithFooter
 <h3>You will be asked to log in. An account has been created for you, and your login details will have been sent to you by email.</h3>
 </li>
 <li>
-<h3>Tap "Select a URL to a zip or html file", and enter the following: nrobb.github.io/taster</h3>
+<h3>Tap "Select a URL to a zip or html file", and enter the following: <b>nrobb.github.io/taster</b></h3>
 <img src="{{ site.url }}/images/cocoon02.png">
 </li>
 <li>
