--- a/game.html
+++ b/game.html
@@ -2,6 +2,9 @@
 title: TASTER prototype
 layout: defaultWithFooter
 ---
-<div>
-  <embed src=http://nrobb.github.io/taster/ width="750" height="500"> </embed>
+<div class="container" style="max-width: 700px; height: auto;"
+<!-- 4:3 aspect ratio -->
+  <div class="embed-responsive embed-responsive-4by3">
+    <iframe class="embed-responsive-item" src="http://nrobb.github.io/taster/"></iframe>
+  </div>
 </div>
