--- a/play.html
+++ b/play.html
@@ -1,5 +1,5 @@
 ---
-title: TASTER prototype
+title: Play the TASTER prototype
 layout: defaultWithFooter
 ---
 <div class="container" style="max-width: 700px; height: auto;"
