--- a/using-the-cocoonjs-launcher.html
+++ b/using-the-cocoonjs-launcher.html
@@ -24,5 +24,8 @@ layout: defaultWithFooter
 <h3>Select CANVAS+ to load and play the game.</h3>
 <img src="{{ site.url }}/images/cocoon03.png">
 </li>
+<li>
+<h3>The CocoonJS Launcher displays debugging information in the top left corner by default. To hide this, click on the gear icon to access the settings, and set 'Enable Debug' to 'Off'.</h3>
+</li>
 </ol>
 </div>
