--- a/play-testing.html
+++ b/play-testing.html
@@ -4,7 +4,7 @@ layout: defaultWithFooter
 ---
 <div>
 <h1>Play testing</h1>
-<h3>Please note that this is a beta version of the software, so it may have some bugs. We'd like our participants to try the game for a short time, and tell us what they think of it.</h3>
+<h3>Please note that this is a beta version of the software, so it may have some bugs.</h3>
 <h3></h3>
 <h3>The game can be accessed in several ways:</h3>
 <h3>Android users can download the game from <a href="https://play.google.com/store/apps/details?id=com.nrobb.tasterControlTest" target="_blank">Google Play</a>.</h3>
