--- a/references.html
+++ b/references.html
@@ -9,6 +9,38 @@ layout: defaultWithFooter
 </head>
 
 <body>
+        <div>
+        <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC TEMPER OUTBURSTS IN PEOPLE WITH PRADER-WILLI SYNDROME TO A COGNITIVE TRAINING VIDEO GAME TO REDUCE SUCH OUTBURSTS
+</h3>
+
+        <h4>Nigel Robb, Kate A. Woodcock, Annalu Waller</h4>
+
+        <ol>
+            <li>Woodcock, K. A., Oliver, C., & Humphreys, G. W. (2009).
+            Task-switching deficits and repetitive behaviour in genetic
+            neurodevelopmental disorders: data from children with Prader–Willi
+            syndrome chromosome 15 q11–q13 deletion and boys with Fragile X
+            syndrome. Cognitive Neuropsychology, 26(2), 172-194.</li>
+
+            <li>Woodcock, K., Oliver, C., & Humphreys, G. (2009). Associations
+            between repetitive questioning, resistance to change, temper
+            outbursts and anxiety in Prader–Willi and Fragile‐X syndromes.
+            Journal of Intellectual Disability Research, 53(3), 265-278.</li>
+
+            <li>Druin, A. (2002). The role of children in the design of new
+            technology. Behaviour and information technology,&nbsp;21(1),
+            1-25.</li>
+
+            <li>Vredenburg, K., Mao, J. Y., Smith, P. W., & Carey, T. (2002). A
+            survey of user-centered design practice. Proceedings of the SIGCHI
+            conference on Human factors in computing systems. ACM.</li>
+
+            <li>Prosser, H., & Bromley, J. (2012). Interviewing people with
+            intellectual disabilities. In Emerson, E., Hatton, C., Dickson, K.,
+            Gone, R., & Caine, A. (Eds.), Clinical Psychology and People with
+            Intellectual Disabilities. Chichester: John Wiley and Sons.</li>
+        </ol>
+    </div>
     <div>
         <h3>HUMAN-CENTRED DESIGN OF ‘TASTER’, A COGNITIVE TRAINING GAME FOR
         CHILDREN WITH PRADER-WILLI SYNDROME</h3>
