--- a/references.html
+++ b/references.html
@@ -13,7 +13,7 @@ layout: defaultWithFooter
         <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC TEMPER OUTBURSTS IN PEOPLE WITH PRADER-WILLI SYNDROME TO A COGNITIVE TRAINING VIDEO GAME TO REDUCE SUCH OUTBURSTS
 </h3>
 
-        <h4>Nigel Robb, Kate A. Woodcock, Annalu Waller</h4>
+        <h4>Nigel Robb, Annalu Waller, Kate A. Woodcock/h4>
 
         <ol>
             <li>Woodcock, K. A., Oliver, C., & Humphreys, G. W. (2009).
