--- a/references.html
+++ b/references.html
@@ -10,8 +10,7 @@ layout: defaultWithFooter
 
 <body>
         <div>
-        <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC TEMPER OUTBURSTS IN PEOPLE WITH PRADER-WILLI SYNDROME TO A COGNITIVE TRAINING VIDEO GAME TO REDUCE SUCH OUTBURSTS
-</h3>
+        <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC TEMPER OUTBURSTS IN PEOPLE WITH PRADER-WILLI SYNDROME TO A COGNITIVE TRAINING VIDEO GAME TO REDUCE SUCH OUTBURSTS</h3>
 
         <h4>Nigel Robb, Annalu Waller, Kate A. Woodcock</h4>
 
