--- a/references.html
+++ b/references.html
@@ -26,9 +26,11 @@ layout: defaultWithFooter
             outbursts and anxiety in Prader–Willi and Fragile‐X syndromes.
             Journal of Intellectual Disability Research, 53(3), 265-278.</li>
             
-            <li>Vredenburg, K., Mao, J. Y., Smith, P. W., & Carey, T. (2002). A
-            survey of user-centered design practice. Proceedings of the SIGCHI
-            conference on Human factors in computing systems. ACM.</li>
+            <li>Druin, A. (2002). The role of children in the design of new
+            technology. Behaviour and information technology, 21(1),
+            1-25.</li>
+            
+            <li>Bernat, E. M., Cadwallader, M., Seo, D., Vizueta, N., & Patrick, C. J. (2011). Effects of Instructed Emotion Regulation on Valence, Arousal, and Attentional Measures of Affective Processing. Developmental Neuropsychology, 36(4), 493-518.</li>
 
         </ol>
     </div>
