--- a/references.html
+++ b/references.html
@@ -1,7 +1,3 @@
----
-title: Conference References
-layout: defaultWithFooter
----
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,8 +5,12 @@ layout: defaultWithFooter
 </head>
 
 <body>
-        <div>
-        <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC TEMPER OUTBURSTS IN PEOPLE WITH PRADER-WILLI SYNDROME TO A COGNITIVE TRAINING VIDEO GAME TO REDUCE SUCH OUTBURSTS</h3>
+    --- title: Conference References layout: defaultWithFooter ---
+
+    <div>
+        <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC
+        TEMPER OUTBURSTS IN PEOPLE WITH PRADER-WILLI SYNDROME TO A COGNITIVE
+        TRAINING VIDEO GAME TO REDUCE SUCH OUTBURSTS</h3>
 
         <h4>Nigel Robb, Annalu Waller, Kate A. Woodcock</h4>
 
@@ -25,15 +25,21 @@ layout: defaultWithFooter
             between repetitive questioning, resistance to change, temper
             outbursts and anxiety in Prader–Willi and Fragile‐X syndromes.
             Journal of Intellectual Disability Research, 53(3), 265-278.</li>
-            
-            <li>Druin, A. (2002). The role of children in the design of new
-            technology. Behaviour and information technology, 21(1),
-            1-25.</li>
-            
-            <li>Bernat, E. M., Cadwallader, M., Seo, D., Vizueta, N., & Patrick, C. J. (2011). Effects of Instructed Emotion Regulation on Valence, Arousal, and Attentional Measures of Affective Processing. Developmental Neuropsychology, 36(4), 493-518.</li>
 
+            <li>Druin, A. (2002). The role of children in the design of new
+            technology. Behaviour and information technology, 21(1), 1-25.</li>
+
+            <li>Bernat, E. M., Cadwallader, M., Seo, D., Vizueta, N., &
+            Patrick, C. J. (2011). Effects of Instructed Emotion Regulation on
+            Valence, Arousal, and Attentional Measures of Affective Processing.
+            Developmental Neuropsychology, 36(4), 493-518.</li>
+
+            <li>Green, C. S., & Bavelier, D. (2008). Exercising your brain: a
+            review of human brain plasticity and training-induced learning.
+            Psychology and aging, 23(4), 692-701.</li>
         </ol>
     </div>
+
     <div>
         <h3>HUMAN-CENTRED DESIGN OF ‘TASTER’, A COGNITIVE TRAINING GAME FOR
         CHILDREN WITH PRADER-WILLI SYNDROME</h3>
