--- a/references.html
+++ b/references.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-
-<body>
-    --- title: Conference References layout: defaultWithFooter ---
+---
+title: Conference References
+layout: defaultWithFooter
+---
 
     <div>
         <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC
