--- a/play.html
+++ b/play.html
@@ -2,9 +2,9 @@
 title: Play the TASTER prototype
 layout: defaultWithFooter
 ---
-<div class="container" style="max-width: 700px; height: auto;"
+<div class="container" style="max-width: 900px; height: auto;"
 <!-- 4:3 aspect ratio -->
   <div class="embed-responsive embed-responsive-4by3">
-    <iframe class="embed-responsive-item" src="http://nrobb.github.io/taster/"></iframe>
+    <iframe class="embed-responsive-item" src="http://nrobb.github.io/taster-0.2/"></iframe>
   </div>
 </div>
