--- a/play.html
+++ b/play.html
@@ -5,12 +5,12 @@ layout: defaultWithFooter
 <div>
   <h4>
     You can play the TASTER game here. This is a development version of the software, so it may have some bugs, and features can change on a daily basis. Note also that the game is designed to be played on a tablet, so some features are not optimised for certain browsers.<br>
-    Known issues:<br>
+    <p>Known issues:</p>
     <ol>
       <li>Sound effects may not play in some versions of Internet Explorer</li>
       <li>The game may occasionally freeze in FireFox. This is a problem with how FireFox embeds content, not a problem with the game</li>
     </ol>
-    For best results, use Google Chrome.
+    <p>For best results, use Google Chrome.</p>
   </h4>
 </div>
 <div class="container" style="max-width: 900px; height: auto;"
