--- a/references.html
+++ b/references.html
@@ -2,6 +2,66 @@
 title: Conference References
 layout: defaultWithFooter
 ---
+    <div>
+        <h3>THE DEVELOPMENT OF TASTER, A COGNITIVE TRAINING GAME USING
+        HUMAN-CENTERED DESIGN, TAILORED FOR CHILDREN WITH GLOBAL AND SPECIFIC
+        COGNITIVE IMPAIRMENTS</h3>
+
+        <h4>Nigel Robb, Annalu Waller, Kate A. Woodcock</h4>
+
+        <ol>
+            <li>J. Whittington, 'Population prevalence and estimated birth
+            incidence and mortality rate for people with Prader-Willi syndrome
+            in one UK Health Region', J. of Medical Genetics, vol. 38, no. 11,
+            pp. 792-798, 2001.</li>
+
+            <li>K. A. Woodcock, C. Oliver and G. Humphreys, 'Task-switching
+            deficits and repetitive behaviour in genetic neurodevelopmental
+            disorders: Data from children with Prader–Willi syndrome chromosome
+            15 q11–q13 deletion and boys with Fragile X syndrome', Cognitive
+            Neuropsychology, vol. 26, no. 2, pp. 172-194, 2009.</li>
+
+            <li>K. A. Woodcock, G. Humphreys, C. Oliver and P. Hansen, 'Neural
+            correlates of task switching in paternal 15q11–q13 deletion
+            Prader–Willi syndrome', Brain Research, vol. 1363, pp. 128-142,
+            2010.</li>
+
+            <li>K. A. Woodcock, C. Oliver and G. Humphreys, 'The relationship
+            between specific cognitive impairment and behaviour in Prader-Willi
+            syndrome', J. of Intellectual Disability Research, vol. 55, no. 2,
+            pp. 152-171, 2011.</li>
+
+            <li>T. Klingberg, H. Forssberg, and H. Westerberg, 'Training of
+            working memory in children with ADHD', J. of Clinical and
+            Experimental Neuropsychology, vol. 24, no. 6, pp. 781-791,
+            2002.</li>
+
+            <li>C. S. Green, M. Sugarman, K. Medford, E. Klobusicky and D.
+            Bavelier, 'The effect of action video game experience on
+            task-switching', Comput. in Human Behavior, vol. 28, no. 3, pp.
+            984-994, 2012.</li>
+
+            <li>C. S. Green and D. Bavelier, 'Learning, Attentional Control,
+            and Action Video Games', Current Biology, vol. 22, no. 6, pp.
+            R197-R206, 2012.</li>
+
+            <li>A. Druin, 'The role of children in the design of new
+            technology', Behaviour & Inform. Technology, vol. 21, no. 1, pp.
+            1-25, 2002.</li>
+
+            <li>H. Prosser and J. Bromley, 'Interviewing people with
+            intellectual disabilities', in Clinical Psychology and People with
+            Intellectual Disabilities, 2nd ed., E. Emerson, K. Dickson, R.
+            Gone, C. Hatton, J. Bromley and A. Caine, Eds. New York: John Wiley
+            & Sons, 2012, pp. 107-120.</li>
+
+            <li>E. M. Bernat, M. Cadwallader, D. Seo, N. Vizueta and C. J.
+            Patrick, ‘Effects of Instructed Emotion Regulation on Valence,
+            Arousal, and Attentional Measures of Affective Processing’,
+            Developmental Neuropsychology, vol. 36, no. 4, pp. 493-518,
+            2011.</li>
+        </ol>
+    </div>
 
     <div>
         <h3>FROM TASK SWITCHING DEFICITS ASSOCIATED WITH BEHAVIOURAL PHENOTYPIC
@@ -82,5 +142,3 @@ layout: defaultWithFooter
             Studios.</li>
         </ol>
     </div>
-</body>
-</html>
