--- a/play.html
+++ b/play.html
@@ -15,6 +15,6 @@ layout: defaultWithFooter
 <div class="container" style="max-width: 900px; height: auto;"
 <!-- 4:3 aspect ratio -->
   <div class="embed-responsive embed-responsive-4by3">
-    <iframe class="embed-responsive-item" src="http://nrobb.github.io/taster-0.2/"></iframe>
+    <iframe class="embed-responsive-item" src="http://nrobb.github.io/taster-0.2/www/"></iframe>
   </div>
 </div>
