--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@ layout: defaultWithFooter
 <h3>We know that individuals with Prader-Willi syndrome have particular difficulties with a brain process called "task switching" or "attention switching". These difficulties are linked to the strong preference for routine that lots of people with the syndrome show. They are also linked to the emotional upset and behaviours such as temper outbursts that individuals can show when things change in their routines or plans.</h3>
 <h3>Working closely with a group of children with PWS, we have designed and developed a <a href="{{site.url}}/play" target="_blank">video game</a> to train tasking switching, tailored to the specific needs of children with the syndrome. Our initial results suggest that children who play the game improve their ability to switch between tasks, and we think that this could lead to less emotional upset when their plans or routines change.</h3>
 <h3>The TASTER project is based at <a href="http://www.qub.ac.uk/schools/psy" target="_blank">Queen's University Belfast</a>, and is funded by the <a href="http://www.fpwr.org" target="_blank">Foundation for Prader-Willi Research</a>.</h3>
-<h3>If you are the parent or carer of someone with PWS and would like to take part in our research, please contact either Kate Woodcock or Nigel Robb.</h3>
-<script type="text/javascript">getMail("k.woodcock", "qub", "ac.uk", "e-mail");</script>
+<h3>If you are the parent or carer of someone with PWS and would like to take part in our research, please contact either <a href="mailto:kx.xwoxodcxxoxck@quxb.xaxcx.uxk" onmouseover="this.href=this.href.replace(/x/g,'');">Kate Woodcock</a> or <a href="mailto:nx.roxxbxbx@qxubx.xaxc.uxk" onmouseover="this.href=this.href.replace(/x/g,'');">Nigel Robb</a>.</h3>
 </div>
 <div class="container" style="max-width: 700px; height: auto;"
 <!-- 4:3 aspect ratio -->
